Add new GeneBlacklistFilter (issue #457) Clean-up uses of ImmutableList, Collectors.toImmutableList() and instanceOf casts to use Java 16+ features